--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "graphql": "^15.5.3",
+    "graphql-tools": "^8.2.0",
     "install": "^0.13.0",
     "npm": "^7.22.0",
     "pg": "^8.7.1",
