--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "graphql": "^15.5.3",
     "graphql-tools": "^8.2.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "npm": "^7.22.0",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
